--- a/MapData/templates/data_plots.html
+++ b/MapData/templates/data_plots.html
@@ -2,6 +2,135 @@
 <html lang="en" dir="ltr">
     <head>
        <meta charset="utf-8">
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    </head>
+    <body>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="navbar-brand">Dengue Spread Information System</div>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav" aria-controls="nav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="nav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/background">Background</a>
+                    </li>  
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/plots">Risk Plot Analysis</a>
+                    </li>    
+                    <li class="nav-item">
+                        <a class="nav-link" href="/contacts">About</a>
+                    </li>        
+                </ul>
+            </div>
+        </nav>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 pt-4 pb-2">
+                    <h3>Risk factor analysis</h3>
+                    <p class="text-justify">
+                        There are several risk factors which could lead to mosquito spread, especially Dengue. The plot below show the variations in several risk factors which are believed to impact the spread of Dengue in a given region. The first plot describes the number of confirmed Dengue cases across the two cities as a line plot. The following plots are split under two headings, based on the city being discussed and demonstrate the risk factors including air temperature, surface temperature, humidity, precipitation and population.
+                        <br>
+                        <strong>Note: </strong> These plots demonstrate variations in data using one specific plotting technique. Application users are encouraged to use these only as reference and then create/explore data directly for any further in-depth research.
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 text-center">
+                    <h5>Number of Dengue Cases in San Juan and Iquitos across years</h5>
+                    <div class="row">
+                        <div class="col-2">
+                        </div>
+                        <div class="col-8">
+                            <img src="{{url_for('static', filename='images/total_dengue_cases.png')}}" align="top" style="float: left; width: 100%; height: 100%;"/>
+                        </div>
+                        <div class="col-2">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <h3><strong>Iquitos</strong> Dengue Analysis Plots</h3>
+                    <p>
+                        The following plots include the risk factor plots from July, 2000 to April, 2013
+                    </p>
+                </div>
+            </div>
+            <div class="iquitos_plots" id="iquitos">
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <h3><strong>San Juan</strong> Dengue Analysis Plots</h3>
+                    <p>
+                        The following plots include the risk factor plots from July, 2000 to April, 2013
+                    </p>
+                </div>
+            </div>
+            <div class="san_juan_plots" id="san_juan">
+            </div>
+        </div>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script>
+            var titles = ["Air Temperature", "Surface Temperature", "Humidity", "Precipitation", "Population"];
+
+            // Plot for Iquitos, Peru
+            var plots = '';
+            var plot_names = ["static/images/iquitos_air_temperature.png", 
+                              "static/images/iquitos_surf_temperature.png", 
+                              "static/images/iquitos_humidity.png", 
+                              "static/images/iquitos_precipitation.png", 
+                              "static/images/iquitos_population.png"];
+            for (i=0; i<5; i++) {
+                plots += '<div class="row">\
+                            <div class="col-12 text-center">\
+                                <div class="row">\
+                                    <div class="col-' + (((i==2) || (i==3)) ? 2 : 1) +'"></div>\
+                                    <div class="col-' + (((i==2) || (i==3)) ? 8 : 10) + '">\
+                                        <img src=' + plot_names[i] + ' align="top" style="float: left; width: 100%; height: 100%;"/>\
+                                    </div>\
+                                    <div class="col-' + (((i==2) || (i==3)) ? 2 : 1) + '"></div>\
+                                </div>\
+                            </div>\
+                        </div>';
+            }
+            $('#iquitos').html(plots);
+
+            // Plot for San Juan, Puerto Rico
+            plots = '';
+            plot_names = ["static/images/san_juan_air_temperature.png", 
+                          "static/images/san_juan_surf_temperature.png",
+                          "static/images/san_juan_humidity.png", 
+                          "static/images/san_juan_precipitation.png", 
+                          "static/images/san_juan_population.png"];
+            for (i=0; i<5; i++) {
+                plots += '<div class="row">\
+                            <div class="col-12 text-center">\
+                                <div class="row">\
+                                    <div class="col-' + (((i==2) || (i==3)) ? 2 : 1) +'"></div>\
+                                    <div class="col-' + (((i==2) || (i==3)) ? 8 : 10) + '">\
+                                        <img src=' + plot_names[i] + ' align="top" style="float: left; width: 100%; height: 100%;"/>\
+                                    </div>\
+                                    <div class="col-' + (((i==2) || (i==3)) ? 2 : 1) + '"></div>\
+                                </div>\
+                            </div>\
+                        </div>';
+            }
+            $('#san_juan').html(plots);
+        </script>
+    </body>
+</html>
+
+
+<!-- <!DOCTYPE html>
+<html lang="en" dir="ltr">
+    <head>
+       <meta charset="utf-8">
        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -91,4 +220,4 @@
             </div>
         </div>
     </body>
-</html>
+</html> -->
