--- a/MapData/templates/data_plots.html
+++ b/MapData/templates/data_plots.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
-       <meta charset="utf-8">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="navbar-brand">Dengue Spread Information System</div>
+            <div class="navbar-brand">
+                <span class="d-lg-none d-md-none">DSIS</span>
+                <span class="d-none d-md-block">Dengue Spread Information System</span>
+            </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav" aria-controls="nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -43,12 +47,12 @@
                 <div class="col-12 text-center">
                     <h5>Number of Dengue Cases in San Juan and Iquitos across years</h5>
                     <div class="row">
-                        <div class="col-2">
+                        <div class="col-md-2 col-sm-0">
                         </div>
-                        <div class="col-8">
+                        <div class="col-md-8 col-sm-12">
                             <img src="{{url_for('static', filename='images/total_dengue_cases.png')}}" align="top" style="float: left; width: 100%; height: 100%;"/>
                         </div>
-                        <div class="col-2">
+                        <div class="col-md-2 col-sm-0">
                         </div>
                     </div>
                 </div>
@@ -90,11 +94,11 @@
                 plots += '<div class="row">\
                             <div class="col-12 text-center">\
                                 <div class="row">\
-                                    <div class="col-' + (((i==2) || (i==3)) ? 2 : 1) +'"></div>\
-                                    <div class="col-' + (((i==2) || (i==3)) ? 8 : 10) + '">\
+                                    <div class="col-md-' + (((i==2) || (i==3)) ? 2 : 1) + ' col-sm-0"></div>\
+                                    <div class="col-md-' + (((i==2) || (i==3)) ? 8 : 10) + ' col-sm-12">\
                                         <img src=' + plot_names[i] + ' align="top" style="float: left; width: 100%; height: 100%;"/>\
                                     </div>\
-                                    <div class="col-' + (((i==2) || (i==3)) ? 2 : 1) + '"></div>\
+                                    <div class="col-md-' + (((i==2) || (i==3)) ? 2 : 1) + ' col-sm-0"></div>\
                                 </div>\
                             </div>\
                         </div>';
@@ -112,11 +116,11 @@
                 plots += '<div class="row">\
                             <div class="col-12 text-center">\
                                 <div class="row">\
-                                    <div class="col-' + (((i==2) || (i==3)) ? 2 : 1) +'"></div>\
-                                    <div class="col-' + (((i==2) || (i==3)) ? 8 : 10) + '">\
+                                    <div class="col-md-' + (((i==2) || (i==3)) ? 2 : 1) +' col-sm-0"></div>\
+                                    <div class="col-md-' + (((i==2) || (i==3)) ? 8 : 10) + ' col-sm-12">\
                                         <img src=' + plot_names[i] + ' align="top" style="float: left; width: 100%; height: 100%;"/>\
                                     </div>\
-                                    <div class="col-' + (((i==2) || (i==3)) ? 2 : 1) + '"></div>\
+                                    <div class="col-' + (((i==2) || (i==3)) ? 2 : 1) + ' col-sm-0"></div>\
                                 </div>\
                             </div>\
                         </div>';
